Dodanie captcha po stronie backendu i frontendu do rejestracji i resetowania hasla
